--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,32 +1,22 @@
-[tool.poetry]
-name = "amis-python"
-version = "1.0.8post2"
-description = "基于百度amis前端框架的python pydantic模型封装。"
-authors = ["惜月 <277073121@qq.com>"]
-readme = "README.md"
-license = "Apache-2.0"
-keywords = ["amis"]
-homepage = "https://github.com/CMHopeSunshine/amis-py"
-repository = "https://github.com/CMHopeSunshine/amis-py"
-documentation = "https://github.com/CMHopeSunshine/amis-py#readme"
-packages = [
-    { include = "amis"}
+[project]
+name = "amisui"
+version = "0.1.0"
+description = "Default template for PDM package"
+authors = [
+    {name = "luxuncang", email = "luxuncang@qq.com"},
 ]
-
-
-[[tool.poetry.source]]
-name = "ali"
-default = true
-url = "https://mirrors.aliyun.com/pypi/simple/"
-
-[tool.poetry.dependencies]
-python = "^3.7"
-pydantic = "^1.9.2"
-jinja2 = "^3.1.2"
-
-[tool.poetry.dev-dependencies]
-
+dependencies = [
+    "pydantic>=2.6.1",
+    "jinja2>=3.1.3",
+]
+requires-python = ">3.8"
+readme = "README.md"
+license = {text = "Apache-2.0"}
 
 [build-system]
-requires = ["poetry_core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
+
+[tool.pdm]
+distribution = true
