--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "amisui"
-version = "0.1.2"
+version = "0.1.3"
 description = "Default template for PDM package"
 authors = [
     {name = "luxuncang", email = "luxuncang@qq.com"},
@@ -9,7 +9,7 @@ dependencies = [
     "pydantic==1.10.14",
     "jinja2>=3.1.3",
 ]
-requires-python = ">3.8"
+requires-python = ">3.7"
 readme = "README.md"
 license = {text = "Apache-2.0"}
 
@@ -20,3 +20,6 @@ build-backend = "pdm.backend"
 
 [tool.pdm]
 distribution = true
+
+[tool.pdm.scripts]
+test = "python tests/test.py"
