--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "amisui"
-version = "0.1.4"
+version = "0.1.5"
 description = "Default template for PDM package"
 authors = [
     {name = "luxuncang", email = "luxuncang@qq.com"},
 ]
 dependencies = [
-    "pydantic==1.10.14",
+    "pydantic>=1.10.14",
     "jinja2>=3.1.3",
 ]
 requires-python = ">3.7"
